app/styles/component_tree.scss
.component-tree-item {
  position: relative;
  display: flex;
  align-items: center;
  margin: 0 3px 2px 3px;
  border-radius: 4px;
  font-size: 12px;
  color: #7C207C;

  &:hover {
    background-color: #ECF1FA;
   
    .component-tree-item__view-element { opacity: 1; }
  }
}

.component-tree-item__tag {
  cursor: pointer;
}

.component-tree-item__bracket::before {
  content: '{{';
  color: #A595A5;
}
.component-tree-item__bracket::after {
  content: '}}';
  color: #A595A5;
}

.component-tree-item__expand {
  display: inline-block;
  height: 9px;
  width: 9px;
  margin-right: 2px;
  cursor: pointer;
  transition-property: transform;
  transition-duration: 0.1s;

  &.collapsed {
    transform: rotate(-90deg);
  }
}

.component-tree-item__view-element {
  display: inline-block;
  margin-left: 10px;
  opacity: 0;
  cursor: pointer;

  polygon, rect, path { fill: #222; }
}


/**
 * Modifier
 */

.component-tree-item--selected {
  color: #fff;
  background: #4977D2;
  &:hover { background: #4977D2; }

  .component-tree-item__bracket::before,
  .component-tree-item__bracket::after {
    color: #A5A5A5
  }

  .component-tree-item__expand,
  .component-tree-item__view-element {
    opacity: 1;
    polygon, rect, path { fill: #fff; }
  }
}

